--- a/Styles/style3.css
+++ b/Styles/style3.css
@@ -164,3 +164,8 @@ body {
 .package-card:nth-child(4){background-image:url("https://images.unsplash.com/photo-1507525428034-b723cf961d3e")}
 .package-card:nth-child(5){background-image:url("https://images.unsplash.com/photo-1518548419970-58e3b4079ab2")}
 .package-card:nth-child(6){background-image:url("https://images.unsplash.com/photo-1502082553048-f009c37129b9")}
+
+.package-card:nth-child(7){background-image: url("https://images.unsplash.com/photo-1500530855697-b586d89ba3ee");}
+
+.package-card:nth-child(8){background-image: url("https://images.unsplash.com/photo-1501785888041-af3ef285b470");}
+
